fix(assets): fit size for static project on mobile

--- a/src/styles/components/portfolio.less
+++ b/src/styles/components/portfolio.less
@@ -66,6 +66,10 @@
       align-self: center;
       height: fit-content;
 
+      @media @tablet-view {
+        width: 100%;
+      }
+
       &_overflow {
         position: relative;
         align-self: auto;
